src/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

body {
    box-sizing: border-box;

    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;

    gap: 100px;

    background: linear-gradient(0deg, rgba(115, 111, 111, .5) 20%, rgba(69, 56, 69, .5) 65%), url(./assets/background.png);
    background-repeat: no-repeat;
    background-size: cover;

    overflow: hidden;

    font-family: "Handjet", sans-serif;
    font-weight: bold;
}

.game {
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;

    gap: 100px;
    color: rgb(66, 184, 131);
    color: rgb(194, 77, 44);
}

.board {
    display: grid;
    grid-template-rows: repeat(11, 60px);
    grid-template-columns: repeat(11, 60px);
    background-image: url(./assets/oceangrid.png);
    background-position: right bottom;
}

.position-number,
.position-letter,
.position {
    background-image: url(./assets/metalic.png);
    background-repeat: no-repeat;
    display: flex;
    align-items: center;
    justify-content: center;

    font-size: 70px;
    font-weight: bold;

    color: #18BAC1;
}

.position-number {
    grid-column: 1 / 2;
}

.position-number:nth-child(1) {
    grid-row: 2 / 3;
}

.position-number:nth-child(2) {
    grid-row: 3 / 4;
}

.position-number:nth-child(3) {
    grid-row: 4 / 5;
}

.position-number:nth-child(4) {
    grid-row: 5 / 6;
}

.position-number:nth-child(5) {
    grid-row: 6 / 7;
}

.position-number:nth-child(6) {
    grid-row: 7 / 8;
}

.position-number:nth-child(7) {
    grid-row: 8 / 9;
}

.position-number:nth-child(8) {
    grid-row: 9 / 10;
}

.position-number:nth-child(9) {
    grid-row: 10 / 11;
}

.position-number:nth-child(10) {
    grid-row: 11 / 12;
}

.position-letter {
    grid-row: 1 / 2;
}

.position-letter:nth-child(11) {
    grid-column: 2 / 3;
}

.position-letter:nth-child(12) {
    grid-column: 3 / 4;
}

.position-letter:nth-child(13) {
    grid-column: 4 / 5;
}

.position-letter:nth-child(14) {
    grid-column: 5 / 6;
}

.position-letter:nth-child(15) {
    grid-column: 6 / 7;
}

.position-letter:nth-child(16) {
    grid-column: 7 / 8;
}

.position-letter:nth-child(17) {
    grid-column: 8 / 9;
}

.position-letter:nth-child(18) {
    grid-column: 9 / 10;
}

.position-letter:nth-child(19) {
    grid-column: 10 / 11;
}

.position-letter:nth-child(20) {
    grid-column: 11 / 12;
}

.selection {
    display: grid;
    grid-template-rows: repeat(12, 60px);
    grid-template-columns: repeat(9, 60px);
    background-image: url(./assets/board.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: top;
}

.start {
    grid-row: 12 / 13;
    grid-column: 4 / 7;

    height: 100%;
    scale: 1.2;
}

.start:hover {
    scale: 1.24;
    cursor: pointer;
}

.start img {
    width: 100%;
    height: 100%;
}

.notice {
    grid-row: 1 / 2;
    grid-column: 2 / 9;
    scale: 1.1;
}

.notice img {
    width: 100%;
    height: 100%;
}

.ship__img,
.missed-attack__img,
.hitted-attack__img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.battleship {
    grid-row: 3 / 8;
    grid-column: 3 / 4;
}

.cruiser {
    grid-row: 3 / 7;
    grid-column: 5 / 6;
}

.destroyer {
    grid-row: 3 / 7;
    grid-column: 7 / 8;
}

.rescue {
    grid-row: 8 / 11;
    grid-column: 7 / 8;
}

.patrol {
    grid-row: 8 / 11;
    grid-column: 5 / 6;
}

.missed-attack,
.hitted-attack {
    position: relative;
    z-index: 100;
}

.square {
    position: relative;
    z-index: 1000;
}

.modal {
    position: absolute;
    z-index: 10000;

    height: 100vh;
    width: 100%;

    display: flex;
    align-items: center;
    justify-content: center;

    color: #4F4233;
}

.modal__bar {
    display: grid;
    grid-template-rows: repeat(10, 40px);
    grid-template-columns: repeat(10, 60px);

    width: 600px;
    height: 400px;

    background: url(./assets/modal.png);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;

    box-shadow: 1px 1px 10px 100vh rgba(69, 56, 69, .5),
        1px 1px 10px 10px rgba(69, 56, 69, .5) inset;
}

.modal__notice {
    grid-row: 1 / 3;
    grid-column: 2 / 10;
}

.modal__notice img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.modal__restart {
    grid-row: 10 / 11;
    grid-column: 4 / 8;
}

.modal__restart:hover {
    scale: 1.05;
    cursor: pointer;
}

.modal__restart img {
    width: 100%;
}

.modal__head {
    grid-row: 4 / 5;
    grid-column: 3 / 9;

    text-align: center;
    text-transform: uppercase;
    font-size: 70px;
    font-weight: bolder;
}

.modal__info {
    grid-row: 6 / 9;
    grid-column: 3 / 9;

    text-align: center;

    font-size: 40px;

    margin-top: 10px;
}

